# ks-hex2pcap

./: README.md  pyproject.toml
src/hex2pcap/: __init__.py  __main__.py  cli.py  csv_parser.py  md_writer.py  metadata.py  parser.py  pcap_writer.py
src/hex2pcap/vendors/: __init__.py  edav2.py
tests/: test_csv_parser.py  test_metadata.py  test_parser.py  test_pcap_writer.py
tests/fixtures/: backslash_x_hex.txt  basic_hex.csv  bpftrace_28gbps.csv  comment_timestamps.txt  edav2_cap.csv  edav2_metadata.csv  inline_timestamps.txt  multi_col_hex.csv  multi_ts_cols.csv  per_line_timestamps.txt  plain_hex.txt  space_separated.txt  timestamp_ms.csv  timestamp_ns.csv  wireshark_style.txt  wireshark_with_text.txt
