[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "hex2pcap"
version = "0.1.0"
description = "Convert hex dumps of Ethernet packets to pcap files"
requires-python = ">=3.8"

[project.scripts]
hex2pcap = "hex2pcap.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
